Add created and updated datetime with tasks. Migration database

--- a/tasks/src/main/resources/application-local.yml
+++ b/tasks/src/main/resources/application-local.yml
@@ -3,7 +3,9 @@ spring:
     enabled: true
     path: '/console'
   datasource:
-    url: 'jdbc:h2:file:/home/kamillodzinski/git_work/Tasks-SpringBoot-Udemy/Tasks-SpringBoot-FlayWay/tasks/todo-tasks'
+    url: 'jdbc:h2:file:/home/kamillodzinski/git_work/Tasks-SpringBoot-Udemy/Tasks-SpringBoot-FlayWay/tasks/H2TODOFILE'
   jpa:
     hibernate:
       ddl-auto: validate
+  flyway:
+    baselineOnMigrate: true
