--- a/tasks/src/main/resources/application.properties
+++ b/tasks/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.profiles.active=prod
-spring.main.banner-mode=off
+spring.profiles.active=local
+#spring.main.banner-mode=log
 tasks.template.allow-multiple-tasks=false
